--- a/fire-business-soe/fire-business-soe.csproj
+++ b/fire-business-soe/fire-business-soe.csproj
@@ -79,8 +79,10 @@
     <Compile Include="Commands\GetValueAtIndexCommand.cs" />
     <Compile Include="Commands\UpdateLayerMapWithFieldIndexMapCommand.cs" />
     <Compile Include="Comparers\MultiSetComparer.cs" />
+    <Compile Include="Converters\ConvertMetersToJsonConverter.cs" />
     <Compile Include="Converters\RoundingJsonConverter.cs" />
     <Compile Include="Encoding\JsonEndpoint.cs" />
+    <Compile Include="Extensions\DoubleExtensions.cs" />
     <Compile Include="FireBusinessSoe.cs" />
     <Compile Include="Models\Criteria.cs" />
     <Compile Include="Models\FeatureClassIndexMap.cs" />
